# AIkaros

./: .gitIgnore  README.md  conda.yaml  pyproject.toml  requirements.txt
allergy_detection/: main.py  mlproject
allergy_detection/data/: compare_WHO_foods.csv
allergy_detection/src/ingestion/: data_loader.py
allergy_detection/src/preprocessing/: cleaner.py  concatenator.py  feature_extractor.py
allergy_detection/src/publishing/: embeddings_publisher.py
allergy_detection/src/transformation/: transformer.py
commons/mlflow_utils/: mlflow_manager.py
commons/utils/: data_preprocessing.py  feature_selection.py  file_io.py  logger.py  mongodb_manager.py
