[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlproject_utils"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = []  # Will be dynamically read from requirements.txt

[tool.setuptools]
packages = { find = {} }  # Automatically detects all packages